# anime-seg-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-release-binaries.yml  release-plz.yml  rust.yml
src/: batch.rs  config.rs  distributed.rs  errors.rs  image_processor.rs  imageops_ai.rs  lib.rs  main.rs  mocks.rs  model.rs  progress_tracker.rs  queue.rs  semaphore.rs  traits.rs  worker.rs
src/imageops_ai/: alpha_mask_applicable.rs  clip_minimum_border.rs  convert_color.rs  mask.rs  padding.rs
tests/: batch_processing_test.rs  distributed_integration_test.rs  integration_test.rs
