[package]
name = "anime-seg-rs"
version = "0.3.0"
authors = []
edition = "2021"
description = "Trying to implement anime-seg in Rust"
repository = "https://github.com/nusu-github/anime-seg-rs"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = [
    "anime",
    "segmentation",
    "image-segmentation",
    "deep-learning",
    "pytorch",
]

[features]
default = ["image"]

# ort execution providers
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]

# image processing
image = ["image/jpeg", "image/png", "image/webp"]
image-extra = ["image/bmp", "image/gif", "image/tiff"]
## The reason for separating avif is that the binary size becomes too large to ignore.
image-avif = ["image/avif"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
image = { version = "0.25", default-features = false }
imageops-ai = { git = "https://github.com/nusu-github/imageops-ai", version = "0.1.0" }
imageproc = { version = "0.25", default-features = false }
indicatif = "0.18.0"
ndarray = "0.16"
nshare = { version = "0.10", default-features = false, features = ["image", "ndarray"] }
ort = "2.0.0-rc.10"
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.20"

[profile.release.package."*"]
opt-level = 3

# 開発時の高速化
[profile.dev]
opt-level = 1
