[package]
name = "anime-seg-rs"
version = "0.3.0"
authors = []
edition = "2021"
description = "Trying to implement anime-seg in Rust"
repository = "https://github.com/nusu-github/anime-seg-rs"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = [
    "anime",
    "segmentation",
    "image-segmentation",
    "deep-learning",
    "pytorch",
]

[features]
default = ["image"]

# ort execution providers
cuda = ["ort/cuda", "ort/copy-dylibs"]
tensorrt = ["ort/tensorrt", "ort/cuda", "ort/copy-dylibs"]

# image processing
image = ["image/jpeg", "image/png", "image/webp"]
image-extra = ["image/bmp", "image/gif", "image/tiff"]
## The reason for separating avif is that the binary size becomes too large to ignore.
image-avif = ["image/avif"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
image = { version = "0.25", default-features = false }
imageops-kit = { git = "https://github.com/nusu-github/imageops-kit", version = "0.1.0" }
imageproc = { version = "0.25", default-features = false }
indicatif = "0.18"
ndarray = "0.16"
nshare = { version = "0.10", default-features = false, features = ["image", "ndarray"] }
ort = "2.0.0-rc.10"
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.23"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3

# 開発時の高速化
[profile.dev]
opt-level = 1
