[package]
name = "anime-seg-rs"
version = "0.3.0"
authors = []
edition = "2021"
description = "Trying to implement anime-seg in Rust"
repository = "https://github.com/nusu-github/anime-seg-rs"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = [
    "anime",
    "segmentation",
    "image-segmentation",
    "deep-learning",
    "pytorch",
]

[features]
default = ["image"]

# ort execution providers
cuda = ["ort/cuda"]

# image processing
image = ["image/jpeg", "image/png", "image/webp"]
image-extra = ["image/bmp", "image/gif", "image/tiff"]
## The reason for separating avif is that the binary size becomes too large to ignore.
image-avif = ["image/avif"]

[dependencies]
anyhow = "1"
clap = { version = "4.5.51", features = ["derive"] }
fast_image_resize = { version = "5.3.0", features = ["image"] }
glob = "0.3"
image = { version = "0.25", default-features = false }
imageops-kit = { git = "https://github.com/nusu-github/imageops-kit", version = "0.1.0" }
imageproc = { version = "0.25", default-features = false }
indicatif = "0.18"
ndarray = "0.17.0"
ort = "2.0.0-rc.10"
thiserror = "2.0"

[profile.dev]
opt-level = 1
